--- a/images.html
+++ b/images.html
@@ -102,14 +102,14 @@
                             <div class="corzo-top-bar-container-inner clearfix">
                                 <div class="corzo-top-bar-left corzo-item-pdlr">
                                     <div class="corzo-top-bar-left-text">
-                                        <i class="fa fa-phone" style="font-size: 19px; color: #f7821e; margin-right: 10px;"></i>+1-2353-4352-555
-                                        <i class="fa fa-clock-o" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>Mon-Sat : 10:00 - 19:00
+                                        <i class="fa fa-phone" style="font-size: 19px; color: #f7821e; margin-right: 10px;"></i>+233-030-2500-386
+                                        <i class="fa fa-clock-o" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>Mon-Sat : 08:00 - 17:00
                                     </div>
                                 </div>
                                 <div class="corzo-top-bar-right corzo-item-pdlr">
                                     <div class="corzo-top-bar-right-text">
                                         <i class="fa5s fa5-envelope-open" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>
-                                        <a href="#" class="__cf_email__">test@gmail.com</a>
+                                        <a href="mailto:info@constantcap.com.gh" class="__cf_email__">info@constantcap.com.gh</a>
                                     </div>
                                     <div class="corzo-top-bar-right-social">
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
@@ -169,7 +169,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -234,10 +234,9 @@
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-center-align gdlr-core-item-pdlr">
-                                                        <div
-                                                            class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-round"
+                                                        <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-round"
                                                             style="border-width: 0px; border-color: #444444; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px;">
-                                                            <img src="upload/iStock-597647584-700x450.jpg" alt="" width="700" height="450" title="Business" />
+                                                            <img src="upload/call-center.jpg" alt="" width="700" height="450" title="Business" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -245,7 +244,7 @@
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                         <div class="gdlr-core-text-box-item-content">
                                                             <p>
-                                                                Investment Research
+                                                                Client Center
                                                             </p>
                                                         </div>
                                                     </div>
@@ -262,7 +261,7 @@
                                                         <div
                                                             class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-with-shadow gdlr-core-image-item-style-round"
                                                             style="border-width: 0px; border-color: #444444; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px;">
-                                                            <img src="upload/iStock-638219322-700x450.jpg" alt="" width="700" height="450" title="Conference" />
+                                                            <img src="upload/research.jpg" alt="" width="700" height="450" title="Conference" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -270,7 +269,7 @@
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                         <div class="gdlr-core-text-box-item-content">
                                                             <p>
-                                                                Client Center
+                                                                Investment Research
                                                             </p>
                                                         </div>
                                                     </div>
