--- a/index.html
+++ b/index.html
@@ -912,11 +912,10 @@
                                 <div class="gdlr-core-pbf-column-content-margin gdlr-core-js"
                                      style="padding: 80px 35px 65px 45px;" data-sync-height="col-service">
                                     <div class="gdlr-core-pbf-background-wrap">
-                                        <div
-                                                class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(upload/top-page3.jpg); background-size: cover; background-position: center;"
-                                                data-parallax-speed="0"
-                                        ></div>
+                                        <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
+                                             style="background-image: url(upload/top-page3.jpg); background-size: cover; background-position: center;"
+                                             data-parallax-speed="0">
+                                        </div>
                                     </div>
                                     <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js gdlr-core-sync-height-content"
                                          style="max-width: 430px;">
