--- a/risk-management.html
+++ b/risk-management.html
@@ -155,15 +155,11 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-
                                             </li>
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
@@ -177,7 +173,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre">
+                                                <a href="images.html" class="sf-with-ul-pre">
                                                     <span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
