home page image change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="corzo-logo corzo-item-pdlr">
                 <div class="corzo-logo-inner">
                     <a class="corzo-fixed-nav-logo" href="index.html">
-                        <img src="upload/logo-white.png"
+                        <img src="upload/logox1.png"
                              alt=""
                              width="123"
                              height="31"
@@ -155,7 +155,7 @@
                             <div class="corzo-logo-inner">
                                 <a class="corzo-fixed-nav-logo" href="index.html">
                                     <img
-                                            src="upload/logo-white.png"
+                                            src="upload/logox1.png"
                                             alt=""
                                             width="123"
                                             height="31"
@@ -702,15 +702,15 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify">
                                                                     <p>
-                                                                        **Treasury Bond Market Commentary - 3rd November 2022
-                                                                        The volumes came back into the market yesterday.
-                                                                        Total FV traded increased by 211.87% d/d to ~GHS993.66 billion;
-                                                                        quite extreme volatility we are seeing in the market.
-                                                                        Most trading activity yesterday was seen in the belly of the curve.
+                                                                        **Treasury Bond Market Commentary- 9th November 2022
+                                                                        Market activity was listless yesterday in anticipation of the expected
+                                                                        CPI release this morning. Most trading activity took place at
+                                                                        the front of the curve with 23 maturities settling around 38.00%.
+                                                                        Large clips of Feb-23 (cpn: 16.50) changed hands at 38.39%.
                                                                     </p>
                                                                 </div>
                                                                 <a class="gdlr-core-feature-content-learn-more" target="_blank"
-                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFYw1FATN5jOooU2Q?e=XnkYHp"
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFc4OjXiMAdfjmdsw?e=ZI7oqA"
                                                                    style="text-transform: none;">Download </a> |
                                                                 <a class="gdlr-core-feature-content-learn-more" href="asset-management.html"
                                                                    style="text-transform: none;">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
@@ -725,7 +725,7 @@
                                                         <div class="gdlr-core-feature-content-thumbnail gdlr-core-media-image">
                                                             <img src="upload/column-top2-700x870.jpg" alt="" width="700" height="870" title="column top2"/>
                                                         </div>
-                                                        <div class="gdlr-core-feature-box-overlay" style="background: #000000; opacity: 0.01;"></div>
+                                                        <div class="gdlr-core-feature-box-overlay" style="background: #0f102f; opacity: 0.01;"></div>
                                                         <div class="gdlr-core-feature-content-box gdlr-core-with-background"
                                                              style="padding-right: 50px; padding-bottom: 40px; padding-left: 55px;">
                                                             <div class="gdlr-core-feature-content-caption gdlr-core-skin-info" style="color: #a5a5a5; font-size: 13px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
@@ -738,20 +738,18 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify;">
                                                                     <p>
-                                                                        MTN Ghana Loses A Pesewa
-                                                                        The stock price of MTN Ghana shed 1 pesewa (GHS0.87, -1.14%
-                                                                        d/d) dragging the GSE-CI down by 0.48%. The benchmark index
-                                                                        ended the session at 2,448.53 pts extending its YTD loss to 12.22%
-                                                                        but the GSE-FSI remained constant at 2,069.89 pts (YTD: -3.81%).
-                                                                        Separately, NewGold ETF stock price climbed to GHS237.20
-                                                                        (0.89% d/d).
+                                                                        Market Summary: NewGold ETF Continued Its Upward Trend
+                                                                        Price action was flat as the GSE-CI remained at 2,460.31 pts
+                                                                        (YTD:-11.80%). Similarly, the GSE Financial Stock Index remained at
+                                                                        2,069.89 pts (YTD: -3.81%). NewGold ETF’s price continued to
+                                                                        trend upwards as it gained 2.63% d/d, to end the session at GHS
+                                                                        257.40/unit.
                                                                     </p>
                                                                 </div>
                                                                 <a class="gdlr-core-feature-content-learn-more" target="_blank"
-                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFZ8jHCUWvEt6z_Mw?e=Gxl20t"
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFd4y1pZ-ja-tkDsg?e=CtbVBj"
                                                                    style="text-transform: none;"> Download
-                                                                </a>
-                                                                |
+                                                                </a>|
                                                                 <a class="gdlr-core-feature-content-learn-more" href="asset-management.html" style="text-transform: none;">
                                                                     Learn More <i class="ion-ios-arrow-thin-right"></i>
                                                                 </a>
@@ -1527,7 +1525,7 @@
                                 <p>
                                     <img
                                             loading="lazy"
-                                            src="upload/logo-white.png"
+                                            src="upload/logox1.png"
                                             alt=""
                                             width="123"
                                             height="31"
