--- a/private-equity-2.html
+++ b/private-equity-2.html
@@ -154,11 +154,8 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
@@ -175,7 +172,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -319,6 +316,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
 <!--                                                download pdf element-->
 <!--                                                <div class="gdlr-core-pbf-element">-->
 <!--                                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">-->
@@ -341,6 +339,7 @@
 <!--                                                        </a>-->
 <!--                                                    </div>-->
 <!--                                                </div>-->
+
                                             </div>
                                         </div>
                                     </div>
@@ -407,7 +406,7 @@
                                                                     <img src="upload/logo01.png" alt="" width="120" height="120" title="logo01" />
                                                                 </span>
                                                                 <div class="gdlr-core-icon-list-content-wrap">
-                                                                    <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none;">
+                                                                    <span class="gdlr-core-icon-list-content" style="color: #0f102f; font-size: 19px; font-weight: 500; text-transform: none;">
                                                                         Access to substantial, long-term capital resources.
                                                                     </span>
                                                                 </div>
@@ -417,7 +416,7 @@
                                                                     <img src="upload/logo02.png" alt="" width="120" height="120" title="logo02" />
                                                                 </span>
                                                                 <div class="gdlr-core-icon-list-content-wrap">
-                                                                    <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none;">
+                                                                    <span class="gdlr-core-icon-list-content" style="color: #0f102f; font-size: 19px; font-weight: 500; text-transform: none;">
                                                                         Helping entrepreneurs scale businesses through strategic capital.
                                                                     </span>
                                                                 </div>
@@ -427,7 +426,7 @@
                                                                     <img src="upload/logo03.png" alt="" width="120" height="120" title="logo03" />
                                                                 </span>
                                                                 <div class="gdlr-core-icon-list-content-wrap">
-                                                                    <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none;">
+                                                                    <span class="gdlr-core-icon-list-content" style="color: #0f102f; font-size: 19px; font-weight: 500; text-transform: none;">
                                                                        Active and flexible support from investment partners for strategic, operational and financial management.
                                                                     </span>
                                                                 </div>
