--- a/team-plain-style.html
+++ b/team-plain-style.html
@@ -272,14 +272,14 @@
                             <div class="corzo-top-bar-container-inner clearfix">
                                 <div class="corzo-top-bar-left corzo-item-pdlr">
                                     <div class="corzo-top-bar-left-text">
-                                        <i class="fa fa-phone" style="font-size: 19px; color: #f7821e; margin-right: 10px;"></i>+1-2353-4352-555
-                                        <i class="fa fa-clock-o" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>Mon-Sat : 10:00 - 19:00
+                                        <i class="fa fa-phone" style="font-size: 19px; color: #f7821e; margin-right: 10px;"></i>+23330-2500-386
+                                        <i class="fa fa-clock-o" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>Mon-Sat : 08:00 - 17:00
                                     </div>
                                 </div>
                                 <div class="corzo-top-bar-right corzo-item-pdlr">
                                     <div class="corzo-top-bar-right-text">
                                         <i class="fa5s fa5-envelope-open" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>
-                                        <a href="#" class="__cf_email__">test@gmail.com</a>
+                                        <a href="mailto:info@constantcap.com.gh" class="__cf_email__">info@constantcap.com.gh</a>
                                     </div>
                                     <div class="corzo-top-bar-right-social">
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
