--- a/asset-management.html
+++ b/asset-management.html
@@ -76,7 +76,7 @@
                                     </li>
 
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
+                                        <a href="images.html">Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -157,29 +157,26 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corportate Profile</a>
-
                                             </li>
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item" data-size="60"><a href="asset-management.html">Security Trading</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                                     <li class="menu-item" data-size="60"><a href="smart-manufacturing.html">Investment Research</a></li>
                                                     <li class="menu-item" data-size="60"><a href="insurance.html">Strategic Advisory</a></li>
-                                                    <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
                                                     <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
-                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
 
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -236,13 +233,11 @@
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 20px;">
-                                                        <span
-                                                                class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                                style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #f7821e;"
-                                                        >
-                                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 15px;"></span>
-                                                            Introduction
-                                                        </span>
+<!--                                                        <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"-->
+<!--                                                                style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #f7821e;">-->
+<!--                                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 15px;"></span>-->
+<!--                                                            Introduction-->
+<!--                                                        </span>-->
                                                         <div class="gdlr-core-title-item-title-wrap">
                                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 44px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #353535;">
                                                                 Our Trading Desks are technology-enabled <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
