--- a/insurance.html
+++ b/insurance.html
@@ -54,15 +54,11 @@
                             <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                             <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                                 <ul id="menu-main-navigation" class="m-menu">
-                                    <li
-                                        class="menu-item menu-item-home menu-item-has-children"
-                                    >
+                                    <li class="menu-item menu-item-home menu-item-has-children">
                                         <a href="index.html" aria-current="page">Home</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="asset-management.html">Our Services</a>
@@ -76,7 +72,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
+                                        <a href="images.html">Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -156,15 +152,11 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-
                                             </li>
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Services</a>
@@ -178,7 +170,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
