--- a/merge-acquisition.html
+++ b/merge-acquisition.html
@@ -76,7 +76,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
+                                        <a href="images.html">Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -85,12 +85,12 @@
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
-
 <!--                                    </li>-->
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="contact-3.html">Contact Us</a>
-
                                     </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -158,15 +158,11 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-
                                             </li>
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
@@ -180,7 +176,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -191,7 +187,6 @@
 <!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
-
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
@@ -208,7 +203,6 @@
                     </header>
                     <!-- header -->
                 </div>
-
 
                 <div class="corzo-page-title-wrap corzo-style-custom corzo-left-align">
                     <div class="corzo-header-transparent-substitute"></div>
