--- a/risk-management.html
+++ b/risk-management.html
@@ -204,8 +204,8 @@
                     <!-- header -->
                 </div>
 
-
                 </div>
+
                 <div class="corzo-page-title-wrap corzo-style-custom corzo-left-align">
                     <div class="corzo-header-transparent-substitute"></div>
                     <div class="corzo-page-title-overlay"></div>
@@ -236,13 +236,11 @@
 
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 20px;">
-                                                        <span
-                                                                class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                                style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #f7821e;"
-                                                        >
-                                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 14px;"></span>
-                                                            Introduction
-                                                        </span>
+<!--                                                        <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"-->
+<!--                                                                style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #f7821e;">-->
+<!--                                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 14px;"></span>-->
+<!--                                                            Introduction-->
+<!--                                                        </span>-->
                                                         <div class="gdlr-core-title-item-title-wrap">
                                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 44px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #353535;">
                                                                 We offer investment-related advisory <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
